tests/purs/failing/InfiniteType.purs
-- @shouldFailWith InfiniteType 

module Main where

f a = a a
